# opendaemon

./: AUTOMATIC_TERMINAL_PROFILE_IMPLEMENTATION.md  CHANGELOG.md  CLI.md  CLI_INTEGRATION_FIX.md  Cargo.toml  DMN_TERMINAL_COMMANDS.md  IDE_COMPATIBILITY_FIX.md  KIRO_MCP_SETUP.md  LICENSE  MCP.md  MCP_DOCUMENTATION_SUMMARY.md  MCP_FIELD_NAME_FIX.md  MCP_INTEGRATION_SUCCESS.md  MCP_SERVER_TEST_RESULTS.md  PACKAGING.md  README.md  SERVICE_ACTIONS_BUG_FIXES.md  SERVICE_ACTIONS_FIX_SUMMARY.md  STATUS_DISPLAY_FIX_SUMMARY.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_14.3_SUMMARY.md  TASK_14_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TERMINAL_INTEGRATION_FEATURE.md  TERMINAL_OPENING_FIX_SUMMARY.md  TESTING_TERMINAL_FEATURE.md  debug_mcp_tools.py  dmn.json  dmn_with_timeout_example.json  problems.md  publishing.md  test-dmn.json  test-mcp-interactive.ps1  test-mcp-server.ps1  test_mcp.py  test_mcp_comprehensive.py  (+3 more)
core/: Cargo.toml
core/src/: cli_daemon_client.rs  cli_runtime.rs  config.rs  error.rs  graph.rs  lib.rs  logs.rs  main.rs  mcp_server.rs  orchestrator.rs  process.rs  ready.rs  rpc.rs
core/tests/: cli_integration_test.rs  custom_timeout_config_test.rs  custom_timeout_test.rs  daemon_integration_test.rs  dependency_autostart_test.rs  error_handling_test.rs  mcp_integration_test.rs  mcp_mode_integration_test.rs  mcp_tools_test.rs  orchestration_e2e_test.rs  timeout_error_content_test.rs  (+1 more)
pro/: Cargo.toml
pro/src/: auth.rs  (+1 more)
(+141 files in other folders)
