[workspace]
members = ["core", "pro"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenDaemon Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
petgraph = "0.6"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
